qt6/network/gen_qdtls.h

class QDtlsClientVerifier;
typedef QDtlsClientVerifier::GeneratorParameters QDtlsClientVerifier__GeneratorParameters;
class QMetaObject;
class QObject;
typedef struct QChildEvent QChildEvent;
typedef struct QDtls QDtls;
typedef struct QDtlsClientVerifier QDtlsClientVerifier;
typedef struct QDtlsClientVerifier__GeneratorParameters QDtlsClientVerifier__GeneratorParameters;
typedef struct QEvent QEvent;
typedef struct QHostAddress QHostAddress;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSslCipher QSslCipher;
typedef struct QSslConfiguration QSslConfiguration;
typedef struct QSslPreSharedKeyAuthenticator QSslPreSharedKeyAuthenticator;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUdpSocket QUdpSocket;
QDtlsClientVerifier* QDtlsClientVerifier_new();
QDtlsClientVerifier* QDtlsClientVerifier_new2(QObject* parent);
QMetaObject* QDtlsClientVerifier_metaObject(const QDtlsClientVerifier* self);
void* QDtlsClientVerifier_metacast(QDtlsClientVerifier* self, const char* param1);
int QDtlsClientVerifier_metacall(QDtlsClientVerifier* self, int param1, int param2, void** param3);
struct miqt_string QDtlsClientVerifier_tr(const char* s);
bool QDtlsClientVerifier_setCookieGeneratorParameters(QDtlsClientVerifier* self, QDtlsClientVerifier__GeneratorParameters* params);
QDtlsClientVerifier__GeneratorParameters* QDtlsClientVerifier_cookieGeneratorParameters(const QDtlsClientVerifier* self);
bool QDtlsClientVerifier_verifyClient(QDtlsClientVerifier* self, QUdpSocket* socket, struct miqt_string dgram, QHostAddress* address, uint16_t port);
struct miqt_string QDtlsClientVerifier_verifiedHello(const QDtlsClientVerifier* self);
unsigned char QDtlsClientVerifier_dtlsError(const QDtlsClientVerifier* self);
struct miqt_string QDtlsClientVerifier_dtlsErrorString(const QDtlsClientVerifier* self);
struct miqt_string QDtlsClientVerifier_tr2(const char* s, const char* c);
struct miqt_string QDtlsClientVerifier_tr3(const char* s, const char* c, int n);
bool QDtlsClientVerifier_override_virtual_metacall(void* self, intptr_t slot);
int QDtlsClientVerifier_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDtlsClientVerifier_override_virtual_event(void* self, intptr_t slot);
bool QDtlsClientVerifier_virtualbase_event(void* self, QEvent* event);
bool QDtlsClientVerifier_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDtlsClientVerifier_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDtlsClientVerifier_override_virtual_timerEvent(void* self, intptr_t slot);
void QDtlsClientVerifier_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDtlsClientVerifier_override_virtual_childEvent(void* self, intptr_t slot);
void QDtlsClientVerifier_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDtlsClientVerifier_override_virtual_customEvent(void* self, intptr_t slot);
void QDtlsClientVerifier_virtualbase_customEvent(void* self, QEvent* event);
bool QDtlsClientVerifier_override_virtual_connectNotify(void* self, intptr_t slot);
void QDtlsClientVerifier_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDtlsClientVerifier_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDtlsClientVerifier_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QDtlsClientVerifier_staticMetaObject();
void QDtlsClientVerifier_delete(QDtlsClientVerifier* self);
QDtls* QDtls_new(int mode);
QDtls* QDtls_new2(int mode, QObject* parent);
QMetaObject* QDtls_metaObject(const QDtls* self);
void* QDtls_metacast(QDtls* self, const char* param1);
int QDtls_metacall(QDtls* self, int param1, int param2, void** param3);
struct miqt_string QDtls_tr(const char* s);
bool QDtls_setPeer(QDtls* self, QHostAddress* address, uint16_t port);
bool QDtls_setPeerVerificationName(QDtls* self, struct miqt_string name);
QHostAddress* QDtls_peerAddress(const QDtls* self);
uint16_t QDtls_peerPort(const QDtls* self);
struct miqt_string QDtls_peerVerificationName(const QDtls* self);
int QDtls_sslMode(const QDtls* self);
void QDtls_setMtuHint(QDtls* self, uint16_t mtuHint);
uint16_t QDtls_mtuHint(const QDtls* self);
bool QDtls_setCookieGeneratorParameters(QDtls* self, QDtlsClientVerifier__GeneratorParameters* params);
QDtlsClientVerifier__GeneratorParameters* QDtls_cookieGeneratorParameters(const QDtls* self);
bool QDtls_setDtlsConfiguration(QDtls* self, QSslConfiguration* configuration);
QSslConfiguration* QDtls_dtlsConfiguration(const QDtls* self);
int QDtls_handshakeState(const QDtls* self);
bool QDtls_doHandshake(QDtls* self, QUdpSocket* socket);
bool QDtls_handleTimeout(QDtls* self, QUdpSocket* socket);
bool QDtls_resumeHandshake(QDtls* self, QUdpSocket* socket);
bool QDtls_abortHandshake(QDtls* self, QUdpSocket* socket);
bool QDtls_shutdown(QDtls* self, QUdpSocket* socket);
bool QDtls_isConnectionEncrypted(const QDtls* self);
QSslCipher* QDtls_sessionCipher(const QDtls* self);
int QDtls_sessionProtocol(const QDtls* self);
long long QDtls_writeDatagramEncrypted(QDtls* self, QUdpSocket* socket, struct miqt_string dgram);
struct miqt_string QDtls_decryptDatagram(QDtls* self, QUdpSocket* socket, struct miqt_string dgram);
unsigned char QDtls_dtlsError(const QDtls* self);
struct miqt_string QDtls_dtlsErrorString(const QDtls* self);
struct miqt_array /* of QSslError* */  QDtls_peerVerificationErrors(const QDtls* self);
void QDtls_ignoreVerificationErrors(QDtls* self, struct miqt_array /* of QSslError* */  errorsToIgnore);
void QDtls_pskRequired(QDtls* self, QSslPreSharedKeyAuthenticator* authenticator);
void QDtls_connect_pskRequired(QDtls* self, intptr_t slot);
void QDtls_handshakeTimeout(QDtls* self);
void QDtls_connect_handshakeTimeout(QDtls* self, intptr_t slot);
struct miqt_string QDtls_tr2(const char* s, const char* c);
struct miqt_string QDtls_tr3(const char* s, const char* c, int n);
bool QDtls_setPeer3(QDtls* self, QHostAddress* address, uint16_t port, struct miqt_string verificationName);
bool QDtls_doHandshake2(QDtls* self, QUdpSocket* socket, struct miqt_string dgram);
bool QDtls_override_virtual_metacall(void* self, intptr_t slot);
int QDtls_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDtls_override_virtual_event(void* self, intptr_t slot);
bool QDtls_virtualbase_event(void* self, QEvent* event);
bool QDtls_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDtls_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDtls_override_virtual_timerEvent(void* self, intptr_t slot);
void QDtls_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDtls_override_virtual_childEvent(void* self, intptr_t slot);
void QDtls_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDtls_override_virtual_customEvent(void* self, intptr_t slot);
void QDtls_virtualbase_customEvent(void* self, QEvent* event);
bool QDtls_override_virtual_connectNotify(void* self, intptr_t slot);
void QDtls_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDtls_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDtls_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QDtls_staticMetaObject();
void QDtls_delete(QDtls* self);
QDtlsClientVerifier__GeneratorParameters* QDtlsClientVerifier__GeneratorParameters_new();
QDtlsClientVerifier__GeneratorParameters* QDtlsClientVerifier__GeneratorParameters_new2(int a, struct miqt_string s);
QDtlsClientVerifier__GeneratorParameters* QDtlsClientVerifier__GeneratorParameters_new3(QDtlsClientVerifier__GeneratorParameters* param1);
void QDtlsClientVerifier__GeneratorParameters_operatorAssign(QDtlsClientVerifier__GeneratorParameters* self, QDtlsClientVerifier__GeneratorParameters* param1);
void QDtlsClientVerifier__GeneratorParameters_delete(QDtlsClientVerifier__GeneratorParameters* self);